Basic bottom bar implementation

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,10 @@ environment:
   sdk: ^3.5.1
 
 dependencies:
+  cupertino_icons: ^1.0.0
   flutter:
     sdk: flutter
+
 
 dev_dependencies:
   flutter_test:
